--- a/CGSN/package.json
+++ b/CGSN/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@shadcn/ui": "^0.0.4",
+    "chart.js": "^4.4.7",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "swiper": "^11.2.1",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "y": "^0.3.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
