--- a/CGSN/package.json
+++ b/CGSN/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@shadcn/ui": "^0.0.4",
     "chart.js": "^4.4.7",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.0.6",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
